argocd/waiter/bacchus-sgs/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bacchus-sgs
spec:
  template:
    spec:
      volumes:
        - name: kubeconfig-secret
          secret:
            secretName: bacchus-sgs-sommelier-creds
        - name:  kubeconfig
          emptyDir: {}
      securityContext:
        fsGroup: 1337
      containers:
        - name: app
          image: bacchus-sgs
          volumeMounts:
            - name: kubeconfig
              subPath: kubeconfig
              mountPath: /kubeconfig
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /healthz
          readinessProbe:
            httpGet:
              port: http
              path: /healthz
          resources:
            requests:
              cpu: 1000m
              memory: 128Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-sgs
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bacchus-sgs
spec:
  hostnames:
    - sgs.snucse.org
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org
  rules:
    - backendRefs:
        - name: bacchus-sgs
          port: 80
